@@ -9,6 +9,10 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/199
+  Enable stackless calls of coroutines wrapped in "asyncio._CTask", if
+  soft-switching is enabled. Now asyncio runs coroutines stackless.
+
 - https://github.com/stackless-dev/stackless/issues/197
   Enable stackless calls of method "contextvars.Context.run", if soft-switching
   is enabled.
